# HRMS-Frontend

./: .gitignore  README.md  delete_inactive_users.py  docker-compose.yml  fetch_api.py  fix.py  fix_api.py  fix_api_js.py  patch_api.py  patch_dates.py  script.py  test_update.py
adv/: package-lock.json  package.json  vite.config.ts
hrms-frontend/: package-lock.json  package.json
hrms-frontend(not)/: README.md  package-lock.json  package.json
university-hrm-backend/: .dockerignore  .env  Dockerfile  (+18 more)
university-hrm-backend-main/university-hrm-backend-main/: .env  README.md  alembic.ini  pyproject.toml
university-hrm-backend-main/university-hrm-backend-main/alembic/: env.py
university-hrm-backend-main/university-hrm-backend-main/alembic/versions/: 5fea5de59222_initial_create_core_tables_user_.py  ed0ad19e7233_add_roles_data_user_role_relationship.py
university-hrm-backend-main/university-hrm-backend-main/app/: main.py
university-hrm-backend-main/university-hrm-backend-main/app/api/: deps.py
university-hrm-backend-main/university-hrm-backend-main/app/api/v1/: auth.py  employees.py
university-hrm-backend-main/university-hrm-backend-main/app/core/: config.py  security.py
university-hrm-backend-main/university-hrm-backend-main/app/db/: session.py
university-hrm-backend-main/university-hrm-backend-main/app/db/models/: department.py  employee.py  role.py  user.py
university-hrm-backend-main/university-hrm-backend-main/app/services/: auth_service.py  employee_service.py
university-hrm-backend-nestjs/: package-lock.json  package.json  tsconfig.json
(+381 files in other folders)
